add webpack build && react

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head></head>
-  <body>hello world</body>
+  <body>
+    <div class='attach'></div>
+    <script src='./bundle.js'></script>
+  </body>
 </html>
