--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,6 @@
   <head></head>
   <body>
     <div class='attach'></div>
-    <script src='./bundle.js'></script>
+    <script src='./dist/bundle.js'></script>
   </body>
 </html>
